--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RESVA Agents.ai</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body className="flex   justify-center items-center">
+    <div id="root" className="flex flex-row w-full h-full justify-center items-center"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
